@@ -122,7 +122,7 @@ result_exception_head()
 result_exception_body()
 {
     for h in $(get_helpers cpp_helpers); do
-        atf_check -s exit:1 -o match:'failed: .*This is unhandled' \
+        atf_check -s signal -o not-match:'failed: .*This is unhandled' \
             "${h}" -s "${srcdir}" result_exception
     done
 }
